[package]
name = "dandanapi"
version = "0.0.1"
edition = "2024"
description = "Dandanapi http client"
license = "MIT"

[dependencies]
age = "0.11.1"
base64 = "0.22.1"
chrono = "0.4.41"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = "1.45.0"

[dev-dependencies]
tokio = { version = "1.43", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
